Change layout of team overview in organizer sites

--- a/src/main/resources/templates/progress/teamList.html
+++ b/src/main/resources/templates/progress/teamList.html
@@ -43,7 +43,8 @@
                 <a href="#" th:href="@{/game/progress/teamsList}" class="btn btn-secondary">Zobrazit všechny týmy</a>
             </div>
         </div>
-
+    </div>
+    <div class="row">
         <div class="col-sm-12">
             <h1>Týmy</h1>
             <div th:if="${teamsProgress.empty and search == null}">
