--- a/src/main/resources/templates/finalplace/form.html
+++ b/src/main/resources/templates/finalplace/form.html
@@ -30,7 +30,8 @@
                 </div>
                 <div class="form-group">
                     <label for="openingTime" class="input-value-required">Čas</label>
-                    <input id="openingTime" class="form-control" type="datetime-local" th:field="*{openingTime}" required/>
+                    <input id="openingTime" class="form-control" type="datetime-local" placeholder="yyyy-MM-ddTHH:mm" th:field="*{openingTime}" required/>
+                    <p class="error" th:if="${#fields.hasErrors('openingTime')}" th:errors="*{openingTime}">Opening time error.</p>
                 </div>
                 <button type="submit" class="btn btn-primary">Uložit</button>
             </form>
