--- a/src/main/resources/templates/cypher/list.html
+++ b/src/main/resources/templates/cypher/list.html
@@ -31,10 +31,10 @@
                 <td th:text="${cypher.name}">Jmeno</td>
                 <td th:text="${cypher.stage}">Cislo</td>
                 <td th:text="${cypher.location}">X, Y</td>
-                <td th:text="${cypher.placeDescription}">Popis mista</td>
+                <td th:text="${#strings.abbreviate(cypher.placeDescription,50)}">Popis mista</td>
                 <td th:text="${cypher.codeword}">codove slovo</td>
                 <td th:text="${cypher.trapCodeword}">Past</td>
-                <td th:text="${cypher.bonusContent}">Bonus</td>
+                <td th:text="${#strings.abbreviate(cypher.bonusContent,50)}">Bonus</td>
                 <td>
                     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Akce
                         <span class="caret"></span>
