--- a/src/main/resources/templates/cypher/form.html
+++ b/src/main/resources/templates/cypher/form.html
@@ -12,11 +12,7 @@
         </div>
         <div class="row">
             <div class="col-sm-6">
-                <form action="#" th:action="@{/admin/cypher/save}" th:object="${cypher}" method="post">
-                    <div class="form-group">
-                        <label for="cypherId">Id</label>
-                        <input id="cypherId" class="form-control" th:field="*{cypherId}" readonly/>
-                    </div>
+                <form action="#" th:object="${command}" method="post">
                     <div class="form-group">
                         <label for="name">Jméno</label>
                         <input id="name" class="form-control" th:field="*{name}"/>
