--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -17,7 +17,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="password" class="login-form-label">Heslo</label>
+                        <label for="password" class="login-form-label">PIN nebo heslo</label>
                         <input type="password" class="form-control" id="password" name="password"/>
                     </div>
 
