GH-387 [Design] Clickable email for client in contact view

--- a/src/main/resources/templates/client/contact.html
+++ b/src/main/resources/templates/client/contact.html
@@ -17,7 +17,7 @@
                 </li>
                 <li>
                     <i class="fas fa-envelope"></i>
-                    <span th:text="${contact.email}">email@email.com</span>
+                    <a href="#" th:href="${'mailto:' + contact.email}" th:text="${contact.email}">email@email.com</a>
                 </li>
             </ul>
             <h2>Odkazy</h2>
