GH-382 Disable auto capitalization for username in login form

--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -13,7 +13,7 @@
 
                     <div class="form-group">
                         <label for="username" class="login-form-label">Uživatelské jméno</label>
-                        <input type="text" class="form-control" id="username" name="username" autofocus/>
+                        <input type="text" autocorrect="off" autocapitalize="none" class="form-control" id="username" name="username" autofocus/>
                     </div>
 
                     <div class="form-group">
