--- a/src/main/resources/templates/client/cypher/detail.html
+++ b/src/main/resources/templates/client/cypher/detail.html
@@ -32,15 +32,15 @@
                             Tuto šifru jste přeskočili
                         </div>
 
-                        <div th:unless="${nextCypher}">
-                            <a class="btn btn-primary" th:href="@{/finalplace}"
-                               role="button">Vyhlášení výsledků </button></a>
-                        </div>
-
                         <div th:if="${nextCypher}">
                             <h2>Kam dál?</h2>
                             <a class="btn btn-primary" th:href="@{'/cypher/' + ${nextCypher.cypherId}}"
-                               role="button">Zobrazit další šifru </button></a>
+                               role="button">Zobrazit další šifru</button></a>
+                        </div>
+
+                        <div th:if="${finalViewAllowed}">
+                            <a class="btn btn-primary" th:href="@{/finalplace}"
+                               role="button">Vyhlášení výsledků</button></a>
                         </div>
                     </th:block>
 
