GH-404 [Fix] Forbid user to skip cypher or take hint after time limit

--- a/src/main/resources/templates/client/cypher/detail.html
+++ b/src/main/resources/templates/client/cypher/detail.html
@@ -11,6 +11,10 @@
             <div class="col-sm-12">
                 <h1 th:text="|${cypher.stage}. ${cypher.name}|">šifra</h1>
 
+                <span class="text-danger" th:if="${#request.getParameter('gameEnded') == 'true'}">
+                    Hra již byla ukončena.
+                </span>
+
                 <th:block th:switch="${status}">
 
                     <th:block th:case="'PENDING'">
