GH-403 stronger displaying of hints

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -229,8 +229,10 @@ nav .back {
     color:deepskyblue;
 }
 
-.hint-label {
+.hint-text {
     font-weight: 600;
+    font-size: 1rem;
+    color: black;
 }
 
 .tag {
