--- a/src/main/resources/templates/client/cypher/detail.html
+++ b/src/main/resources/templates/client/cypher/detail.html
@@ -93,8 +93,8 @@
                     <h2>Nápověda</h2>
                     <th:block th:if="${not #lists.isEmpty(hintsTaken)}">
                         <div th:each="hintTaken : ${hintsTaken}">
-                            <p>
-                                <span class="hint-label" th:text="|Nápověda (-${hintTaken.hint.value}b.):|"></span>
+                            <p class="hint-text" >
+                                <span th:text="|Nápověda (-${hintTaken.hint.value}b.):|"></span>
                                 <span th:text="${hintTaken.hint.text}"></span>
                                 <br />
                                 <img th:if="${!#strings.isEmpty(hintTaken.hint.imageUrl)}" class="hint-image" alt="Obrázek nápovědy" src="" th:src="@{${hintTaken.hint.imageUrl}}" />
