--- a/src/main/resources/templates/progress/getHintList.html
+++ b/src/main/resources/templates/progress/getHintList.html
@@ -15,8 +15,8 @@
 
             <th:block th:if="${not #lists.isEmpty(hintsTaken)}">
                 <div th:each="hintTaken : ${hintsTaken}">
-                    <p>
-                        <span class="hint-label" th:text="|Nápověda (-${hintTaken.hint.value}b.):|"></span>
+                    <p class="hint-text">
+                        <span th:text="|Nápověda (-${hintTaken.hint.value}b.):|"></span>
                         <span th:text="${hintTaken.hint.text}"></span>
                         <br />
                         <img th:if="${!#strings.isEmpty(hintTaken.hint.imageUrl)}" class="img-fluid hint-image" alt="Obrázek nápovědy" src="" th:src="@{${hintTaken.hint.imageUrl}}" />
@@ -44,7 +44,7 @@
             <div th:each="hint : ${hintsNotTaken}">
                 <button class="btn btn-default btn-flat btn-take"
                         th:onclick="'javascript:takeHintDialog(' + ${hint.hintId} + ')'">
-                    <span class="hint-label" th:text="|Vzít hint (-${hint.value}b.)|"></span>
+                    <span class="hint-text" th:text="|Vzít hint (-${hint.value}b.)|"></span>
                 </button>
             </div>
         </div>
