Add svg logo to the login page

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -602,6 +602,10 @@ td .btn-default {
     z-index: -1;
 }
 
+.login-footer img {
+    width: 10rem;
+}
+
 ul.contact {
     list-style: none;
     padding: 0px;
