--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -31,7 +31,7 @@
         </div>
     </div>
     <footer class="login-footer">
-        <img src="../../static/img/cngroup-logo.png" th:src="@{/img/cngroup-logo.png}" alt="CN Group Zlin" />
+        <img src="../../static/img/logo_white_rgb.svg" th:src="@{/img/logo_white_rgb.svg}" alt="CN Group Zlin" />
     </footer>
 </body>
 </html>
