--- a/src/main/resources/templates/client/cypher/detail.html
+++ b/src/main/resources/templates/client/cypher/detail.html
@@ -97,7 +97,7 @@
                                 <span th:text="|Nápověda (-${hintTaken.hint.value}b.):|"></span>
                                 <span th:text="${hintTaken.hint.text}"></span>
                                 <br />
-                                <img th:if="${!#strings.isEmpty(hintTaken.hint.imageUrl)}" class="hint-image" alt="Obrázek nápovědy" src="" th:src="@{${hintTaken.hint.imageUrl}}" />
+                                <img th:if="${!#strings.isEmpty(hintTaken.hint.imageUrl)}" class="hint-image img-fluid" alt="Obrázek nápovědy" src="" th:src="@{${hintTaken.hint.imageUrl}}" />
                             </p>
                         </div>
                     </th:block>
