--- a/src/main/resources/templates/finalplace/form.html
+++ b/src/main/resources/templates/finalplace/form.html
@@ -8,6 +8,9 @@
     <div class="row">
         <div class="col-sm-12">
             <h2>Místo vyhlášení</h2>
+            <p>
+                Čas na serveru: <span th:text="${serverTime}">N/A</span>
+            </p>
         </div>
     </div>
     <div class="row">
