--- a/src/main/resources/templates/client/cypher/detail.html
+++ b/src/main/resources/templates/client/cypher/detail.html
@@ -22,7 +22,7 @@
                         <form th:action="|/cypher/verify/${cypher.cypherId}|" th:object="${codeword}" method="post">
                             <div class="form-group">
                                 <!--<label for="guess">Řešení</label>-->
-                                <input id="guess" type="text" th:field="*{guess}" class="form-control" />
+                                <input id="guess" type="text" th:field="*{guess}" class="form-control" required />
                                 <p th:if="${#fields.hasErrors('guess')}" th:class="'error'" th:errors="*{guess}" id="errorMessage"></p>
                             </div>
                             <div class="form-group">
