zmena popisu tlacitka na Domu

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-sm-12">
             <h2 class="login-form-header">Chyba, tady nic nenajdeš...</h2>
-            <a href="#" class="btn btn-primary" th:href="@{/successfulLogin}">Zpět</a>
+            <a href="#" class="btn btn-primary" th:href="@{/successfulLogin}">Domů</a>
         </div>
     </div>
 </div>
