GH-428 [Fix] Add image element to the client hint list for a cypher

--- a/src/main/resources/templates/client/hint/list.html
+++ b/src/main/resources/templates/client/hint/list.html
@@ -23,6 +23,9 @@
                             <span th:text="|Nápověda (-${hintTaken.hint.value}b.):|"></span>
                             <span th:text="${hintTaken.hint.text}"></span>
                         </p>
+                        <p th:if="${!#strings.isEmpty(hintTaken.hint.imageUrl)}">
+                            <img class="hint-image img-fluid" alt="Obrázek nápovědy" src="" th:src="@{${hintTaken.hint.imageUrl}}" />
+                        </p>
                     </div>
                 </th:block>
                 <th:block th:if="${#lists.isEmpty(hintsTaken)}">
