GH-426 [Bug] Verify, skip and take hint only if cypher status is Pending

--- a/src/main/resources/templates/client/cypher/detail.html
+++ b/src/main/resources/templates/client/cypher/detail.html
@@ -14,6 +14,9 @@
                 <span class="text-danger" th:if="${#request.getParameter('gameEnded') == 'true'}">
                     Hra již byla ukončena.
                 </span>
+                <span class="text-danger" th:if="${#request.getParameter('wrongStatus') == 'true'}">
+                    Šifra není aktivní.
+                </span>
 
                 <th:block th:switch="${status}">
 
