--- a/src/main/resources/templates/client/hint/list.html
+++ b/src/main/resources/templates/client/hint/list.html
@@ -14,6 +14,9 @@
                 <span class="text-danger" th:if="${#request.getParameter('gameEnded') == 'true'}">
                     Hra již byla ukončena.
                 </span>
+                <span class="text-danger" th:if="${#request.getParameter('wrongStatus') == 'true'}">
+                    Šifra není aktivní.
+                </span>
 
                 <h2>Odemknuté nápovědy</h2>
 
