Add margin at the end of cypher list od client view

--- a/src/main/resources/templates/client/cypher/list.html
+++ b/src/main/resources/templates/client/cypher/list.html
@@ -7,7 +7,7 @@
 
     <div class="container">
 
-        <div class="row">
+        <div class="row cypher-list">
             <div class="col-sm-12" th:if="${gameStarted}">
                 <h1>Šifry</h1>
                 <div th:each="cypherGameInfo : ${cypherGameInfos}" class="cypher">
