--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -619,5 +619,9 @@ ul.contact i {
 }
 
 .hint-image {
-    margin-top:0.5rem
+    margin-top: 0.5rem
+}
+
+.cypher-list {
+    margin-bottom: 5rem;
 }
