add export logic, score export controller

--- a/src/main/resources/templates/score/list.html
+++ b/src/main/resources/templates/score/list.html
@@ -7,6 +7,11 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
+            <a href="#" class="btn btn-primary" th:href="@{/game/score/export}" target="_blank">
+                Exportovat skóre do PDF
+            </a>
+        </div>
+        <div class="col-sm-12">
             <h1>Pořadí týmů podle skóre</h1>
 
             <div class="row score-header">
