GH-444 Add new field finishTime to finalplace + test adaption
GH-444 Add new field accessTime + adapted tests

odebrany assertions pro hladky update aplikace

--- a/src/main/resources/templates/client/cypher/list.html
+++ b/src/main/resources/templates/client/cypher/list.html
@@ -48,7 +48,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div id="time" class="col">
-                        <p th:text="${openingTime}"></p>
+                        <p th:text="${resultsTime}"></p>
                     </div>
                     <div id="content" class="col">
                         Vyhlášení výsledků
