--- a/src/main/resources/templates/finalplace/form.html
+++ b/src/main/resources/templates/finalplace/form.html
@@ -32,9 +32,19 @@
                     <p class="error" th:if="${#fields.hasErrors('location')}" th:errors="*{location}">Location error.</p>
                 </div>
                 <div class="form-group">
-                    <label for="openingTime" class="input-value-required">Čas</label>
-                    <input id="openingTime" class="form-control" type="datetime-local" placeholder="yyyy-MM-ddTHH:mm" th:field="*{openingTime}" required/>
-                    <p class="error" th:if="${#fields.hasErrors('openingTime')}" th:errors="*{openingTime}">Opening time error.</p>
+                    <label for="finishTime" class="input-value-required">Čas ukončení</label>
+                    <input id="finishTime" class="form-control" type="datetime-local" placeholder="yyyy-MM-ddTHH:mm" th:field="*{finishTime}" required/>
+                    <p class="error" th:if="${#fields.hasErrors('finishTime')}" th:errors="*{finishTime}">Finish time error.</p>
+                </div>
+                <div class="form-group">
+                    <label for="resultsTime" class="input-value-required">Čas vyhlášení</label>
+                    <input id="resultsTime" class="form-control" type="datetime-local" placeholder="yyyy-MM-ddTHH:mm" th:field="*{resultsTime}" required/>
+                    <p class="error" th:if="${#fields.hasErrors('resultsTime')}" th:errors="*{resultsTime}">Results time error.</p>
+                </div>
+                <div class="form-group">
+                    <label for="resultsTime" class="input-value-required">Zpřístupnění místa vyhlášení před časem ukončení (minuty)</label>
+                    <input id="accessTime" class="form-control" type="number" th:field="*{accessTime}" required/>
+                    <p class="error" th:if="${#fields.hasErrors('accessTime')}" th:errors="*{accessTime}">access time error.</p>
                 </div>
                 <button type="submit" class="btn btn-primary">Uložit</button>
             </form>
