--- a/src/main/resources/templates/client/finalplace/detail.html
+++ b/src/main/resources/templates/client/finalplace/detail.html
@@ -15,7 +15,7 @@
     <div class="row">
         <div class="col-sm-12">
             <div class="alert alert-danger red" role="alert">
-                <th:block th:text="${'Vyhlášení proběhne dnes v ' + finalplace.getOpeningTimeOnly()}">
+                <th:block th:text="${'Vyhlášení proběhne dnes v ' + finalplace.getResultsTime().toLocalTime()}">
                     
                 </th:block>
             </div>
