--- a/src/main/resources/templates/contact/form.html
+++ b/src/main/resources/templates/contact/form.html
@@ -23,8 +23,8 @@
                     <p class="error" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name error.</p>
                 </div>
                 <div class="form-group">
-                    <label for="phoneNumber">Telefonní číslo</label>
-                    <input id="phoneNumber" class="form-control" th:field="*{phoneNumber}"/>
+                    <label for="phoneNumber" class="input-value-required">Telefonní číslo</label>
+                    <input id="phoneNumber" class="form-control" th:field="*{phoneNumber}" required/>
                     <p class="error" th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}">PhoneNumber error.</p>
                 </div>
                 <div class="form-group">
