--- a/src/main/resources/templates/score/list.html
+++ b/src/main/resources/templates/score/list.html
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col-sm-12">
             <a href="#" class="btn btn-primary" th:href="@{/game/score/export}" target="_blank">
-                Exportovat skóre do PDF
+                Export do PDF
             </a>
         </div>
         <div class="col-sm-12">
