--- a/src/main/resources/templates/client/cypher/detail.html
+++ b/src/main/resources/templates/client/cypher/detail.html
@@ -82,7 +82,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <h2>Adresa</h2>
-                <p th:text="${'GPS: ' + cypher.location.y + ' ' + cypher.location.x}"></p>
+                <p><span th:replace="fragments/gps-position :: gps(${cypher.location})"></span></p>
                 <p th:text="${cypher.placeDescription}"></p>
                 <div id="map" style='width: 100%; height: 150px;'></div>
                 <a th:href="@{${cypher.mapAddress}}"
