--- a/src/main/resources/templates/hint/list.html
+++ b/src/main/resources/templates/hint/list.html
@@ -18,6 +18,7 @@
                     <th scope="col">Odpověď</th>
                     <th scope="col">Falešná odpověď</th>
                     <th scope="col">Bonus</th>
+                    <th scope="col">Organizátor</th>
                     <th scope="col">Mapa</th>
                     <th scope="col">Akce</th>
 
@@ -33,6 +34,12 @@
                     <td th:text="${cypher.codeword}">codove slovo</td>
                     <td th:text="${cypher.trapCodeword}">Past</td>
                     <td th:text="${cypher.bonusContent}">Bonus</td>
+                    <td>
+                        <th:block th:unless="${cypher.organizers == null}"
+                                  th:each="o, iterStat : ${cypher.organizers}"
+                                  th:text="!${iterStat.last} ? ${o.username} + ', ' : ${o.username}">Organizator
+                        </th:block>
+                    </td>
                     <td>
                         <a href="#" th:href="@{${cypher.mapAddress}}" target="_blank" class="btn btn-secondary">Mapa</a>
                     </td>
