--- a/src/main/resources/templates/hint/detail.html
+++ b/src/main/resources/templates/hint/detail.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="cs" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/head :: head('Detail nápovědy')">
+    <resources mapping="/resources/**" location="file:/upload/images" />
 </head>
 <body>
 <div th:insert="fragments/header :: header(cypher)"></div>
@@ -30,7 +31,11 @@
                 </div>
                 <div class="form-group">
                     <div>Soubor s obrázkem</div>
-                    <div class="form-control" th:text="${filename}">Image</div>
+                    <div class="form-control" th:text="${formObject.image.getOriginalFilename()}">Image</div>
+                </div>
+                <div class="form-group">
+                    <div>Id obrázku</div>
+                    <div class="form-control" th:text="${fileId}">Image</div>
                 </div>
                 <div class="form-group">
                     <input id="image" class="btn btn-primary" type="file" th:field="*{image}" accept="image/*"/>
@@ -46,6 +51,11 @@
         </div>
         <div class="col-sm-6">
             <img th:if="${!#strings.isEmpty(formObject.imageUrl)}" class="img-fluid" alt="Obrázek nápovědy" src="" th:src="@{${formObject.imageUrl}}" />
+        </div>
+        <div class="col-sm-6">
+<!--            <img th:if="${!#strings.isEmpty(formObject.image)}" class="img-fluid" alt="Obrázek nápovědy" src="" th:src="@{${filename}}" />-->
+            <img th:if="${!#strings.isEmpty(filename)}" class="img-fluid" alt="Obrázek nápovědy" src="" th:src="@{'/image/' + ${fileId}}" />
+<!--            <img src="C:/Users/sedlackova/Desktop/lentils/upload/images/billy.jpg"></img>-->
         </div>
     </div>
 </div>
